# course-work-db

./: .gitignore  .gitmodules  Makefile  README.md  main.c  pizerria.db
backend/: Makefile  api  main.c  pizerria.db  test.md
backend/include/types/: http.c
backend/src/: utils.c
backend/src/routes/api/: list_categories.c  product_create.c  product_preview.c
docs/: diagram.dot  infological-diagram.drawio  model.ipynb
docs/.ipynb_checkpoints/: model-checkpoint.ipynb
frontend/: CMakeLists.txt  README.md  ddmain.c  main.c
frontend/src/utils/: fetch.c  strings.c
include/types/: db.c
src/: utils.h
src/routes/api/: list_categories.h  product_create.c  product_create.h  product_preview.c  product_preview.h
